  * debian/sysdeps/hurd.mk: Try to symlink mach/hurd headers from multiarch
    directory when they are there.

  [ Aurelien Jarno ]
  * debian/rules: Add -fdebug-prefix-map= to CFLAGS to improve
    reproducibility.
  * debian/control.in/libc: Make libcX-dev declare a Breaks against python3.7
    (<< 3.7.7-1+b1) and python3.8 (<< 3.8.2-1+b1) due to #955474.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Mar 2020 19:45:17 +0200

glibc (2.30-4) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst, debian/rules.d/debhelper.mk: there
    is no easy way to check if a file belongs to a package with usrmerge.
    Just drop all safety checks...  Closes: #954915.
  * debian/patches/any/local-tst-system-disable-shell-tests.diff: disable
    tests that rely on a particular shell until a fix is found upstream.

  [ John Paul Adrian Glaubitz ]
  * debian/testsuite-xfail-debian.mk: mark nptl/tst-cond8-static and
    nptl/tst-mutex{,pi}8-static as XFAIL on sparc64.  Closes: #953869.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Mar 2020 13:56:56 +0100

glibc (2.30-3) unstable; urgency=medium

  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix a defect in the PowerPC backtrace function that could cause an
      out-of-bounds write when executed in a signal frame context
      (CVE-2020-1751).
    - Fix use-after-free vulnerability in the glob function when expanding
      ~user (CVE-2020-1752).  Closes: #953788.
  * debian/debhelper.in/libc.preinst, debian/rules.d/debhelper.mk: determine
    ld.so ELF magic at build time instead of at run time to avoid using
    "readlink -m".  Closes: #954374.
  * debian/rules.d/build.mk: unset LANGUAGE when running the testsuite.
  * debian/testsuite-xfail-debian.mk: ignore signal/tst-minsigstksz-1 and
    signal/tst-minsigstksz-2 on i386, they fail on i386 with an AVX-512 CPUs
    due to a kernel bug.  Closes: #954715.