@@ -12,6 +12,8 @@ glibc (2.30-5) UNRELEASED; urgency=medium
     reproducibility.
   * debian/control.in/libc: Make libcX-dev declare a Breaks against python3.7
     (<< 3.7.7-1+b1) and python3.8 (<< 3.8.2-1+b1) due to #955474.
+  * debian/rules.d/debhelper.mk: install the dynamic loader symlink in the
+    udeb package.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Mar 2020 19:45:17 +0200
 
